--- a/my-research.qmd
+++ b/my-research.qmd
@@ -11,3 +11,5 @@ listing:
 ---
 
 My research has largely focused on ecological change over time. I'm interested in expanding to how ecosystems change over space and what are the human implications of ecological change. Feel free to get in touch if you want to chat research! Here are some simple summaries of my published work, and some sneak previews of work that is about to be published.
+
+If you require access to any of the full articles, don't hesitate to contact me.
