--- a/my-research-posts/asena-2024b.qmd
+++ b/my-research-posts/asena-2024b.qmd
@@ -29,7 +29,7 @@ The uncertainties are introduced to the data systematically. By introducing the 
 
 It is useful to see the different influence of the uncertainties when applied individually. However, this result is expected. We know that data become worse if we ruin them! What we want to find out is which sources of uncertainty have the strongest influence, and which ones interact when applied in combination.
 
-In the following figure (@fig-twoD), two sources of uncertainty are plotted, one on each axis. What we are interested in here is whether the Euclidean distance increases along the diagonal of the plot, indicating an interaction between the uncertainties. By far the strongest influence is from the combined effect of proxy counting and sub-sampling (@fig-towD C). There appears to be little interaction between mixing and either proxy counting and sub-sampling.
+In the following figure (@fig-twoD), two sources of uncertainty are plotted, one on each axis. What we are interested in here is whether the Euclidean distance increases along the diagonal of the plot, indicating an interaction between the uncertainties. By far the strongest influence is from the combined effect of proxy counting and sub-sampling (@fig-twoD C). There appears to be little interaction between mixing and either proxy counting and sub-sampling.
 
 ![Mean Euclidean distance from the ‘error-free’ core of two treatments combined calculated across replicate simulations for Fisher’s infomation. The mixing axis shows the number of time-steps over which mixing occurs. Along the sub-sampling axis, the frequency of sub-sampling in centimetres is shown, and the proxy counting axis displays count resolutions in number of individuals counted per sample. In the proxy counting treatment, uncertainty increases as count resolution decreases.](images/asena-2024b/walk_step_fisher_two_dim_metrics_mean_plot.png){#fig-twoD}
 
